ユーザリスト表示

--- a/WindowsFormApp.csproj
+++ b/WindowsFormApp.csproj
@@ -52,6 +52,7 @@
     <Compile Include="MenuForm.Designer.cs">
       <DependentUpon>MenuForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserInfoDTO.cs" />
     <Compile Include="UserListForm.cs">
       <SubType>Form</SubType>
     </Compile>
